--- a/index.html
+++ b/index.html
@@ -10,15 +10,63 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Meet - Group Chat</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/typograph.css">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/components.css">
   <link rel="stylesheet" href="css/grid.css">
 </head>
 
 <body>
-  <div class="container">
-    
-  </div>
+  <nav>
+    <a href="index.html"><img src="assets/logo.png" alt="Logo Meet">
+    </a>
+  </nav>
+
+  <section class="s-hero">
+    <div class="img-left">
+      <img src="assets/img-left.png" alt="">
+    </div>
+    <div class="info">
+      <h1>Group Chat
+        for Everyone
+      </h1>
+      <p>Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.</p>
+      <button class="btn-blue">
+        Download <span>v1.3</span>
+      </button>
+      <button class="btn-purple">
+        Download <span>v1.3</span>
+      </button>
+    </div>
+    <div class="img-right">
+      <img src="./assets/img-right.png " alt="">
+    </div>
+  </section>
+
+  <section class="s-content">
+    <div class="container">
+      <div class="number">
+        <div class="line">
+
+        </div>
+        <div class="ball">
+          01
+        </div>
+      </div>
+      <div class="cards">
+        <img src="assets/img1.png" alt="">
+        <img src="assets/img2.png" alt="">
+        <img src="assets/img3.png" alt="">
+        <img src="assets/img4.png" alt="">
+      </div>
+      <div class="info">
+        <h3>Built for modern use</h3>
+        <h2>Smarter meetings, all in one place</h2>
+        <p>Send messages, share files, show your screen, and record your meetings — all in one workspace. Control who
+          can join with invite-only team access, data encryption, and data export.</p>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
