--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@
         for Everyone
       </h1>
       <p>Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.</p>
-      <button class="btn-blue">
-        Download <span>v1.3</span>
-      </button>
-      <button class="btn-purple">
-        Download <span>v1.3</span>
-      </button>
+      <div class="button">
+        <button class="btn-blue">
+          Download <span>v1.3</span>
+        </button>
+        <button class="btn-purple">
+          Download <span>v1.3</span>
+        </button>
+      </div>
     </div>
     <div class="img-right">
       <img src="./assets/img-right.png " alt="">
@@ -67,6 +69,28 @@
       </div>
     </div>
   </section>
+
+  <footer class="footer">
+    <div class="number">
+      <div class="line">
+
+      </div>
+      <div class="ball">
+        02
+      </div>
+    </div>
+    <div class="footer-cta">
+      <div class="container">
+        <div class="title-footer">
+          <h2>Experience more together</h2>
+          <p>Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.</p>
+        <button class="btn-purple">
+          Download <span>v1.3</span>
+        </button>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
