finalizando projeto e responsividade

--- a/index.html
+++ b/index.html
@@ -44,6 +44,20 @@
       <img src="./assets/img-right.png " alt="">
     </div>
   </section>
+  <div class="info-768">
+    <h1>Group Chat
+      for Everyone
+    </h1>
+    <p>Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.</p>
+    <div class="button">
+      <button class="btn-blue">
+        Download <span>v1.3</span>
+      </button>
+      <button class="btn-purple">
+        Download <span>v1.3</span>
+      </button>
+    </div>
+  </div>
 
   <section class="s-content">
     <div class="container">
@@ -84,9 +98,9 @@
         <div class="title-footer">
           <h2>Experience more together</h2>
           <p>Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.</p>
-        <button class="btn-purple">
-          Download <span>v1.3</span>
-        </button>
+          <button class="btn-purple">
+            Download <span>v1.3</span>
+          </button>
         </div>
       </div>
     </div>
