atualizando botao purple

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           Download <span>v1.3</span>
         </button>
         <button class="btn-purple">
-          Download <span>v1.3</span>
+          What is it?
         </button>
       </div>
     </div>
